<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_scan"
        android:icon="@drawable/ic_qr_scan"
        android:title="@string/action_scan"
        android:contentDescription="@string/action_scan"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_toggle_theme"
        android:title="@string/action_toggle_theme"
        app:actionLayout="@layout/theme_switch_action_view"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_edit"
        android:title="@string/action_edit"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_ai_input"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/action_ai_input"
        app:showAsAction="always" />

</menu>
