<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/component_row_height"
    android:orientation="horizontal"
    android:background="@color/component_row_background"
    android:paddingStart="@dimen/spacing_medium"
    android:paddingEnd="@dimen/spacing_medium"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/tvLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/components_label"
        android:textSize="@dimen/text_size_body"
        android:textColor="@color/text_primary"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvPreview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="@dimen/spacing_small"
        android:layout_marginEnd="@dimen/spacing_small"
        android:text="@string/hint_empty_json"
        android:textSize="@dimen/text_size_caption"
        android:textColor="@color/text_secondary"
        android:maxLines="1"
        android:ellipsize="end" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_button"
        android:textSize="@dimen/text_size_caption"
        style="@style/Widget.MaterialComponents.Button.TextButton" />

</LinearLayout>